// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection › Router Add items to extracted once they are ready 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "extract": true,
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "mockedId_54",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "mockedId_53",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "mockedId_54",
  },
]
`;

exports[`Connection › Router Columns should not show next items if extracted after that item is not resolved 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
        Array [
          Object {
            "extract": true,
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 3,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_3",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;

exports[`Connection › Router Columns should not show previous items if extracted before that item is not resolved 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
        Array [
          Object {
            "extract": true,
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 3,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_3",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_63",
      },
    ],
    "selectedColumn": "context_0_column_3",
  },
]
`;

exports[`Connection › Router Initializes contexts as empty array 1`] = `Array []`;

exports[`Connection › Router Move selected single 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 2,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "0_post_63",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;

exports[`Connection › Router Move selected single from column with only that item 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 3,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": true,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "0_post_62",
      },
    ],
    "selectedColumn": "context_0_column_2",
  },
]
`;

exports[`Connection › Router Replace context with new one 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 6,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_4",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_5",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_6",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 3,
            "mstId": "0_tag_3_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;

exports[`Connection › Router Select in next context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 62,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_1_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_62",
      },
    ],
    "selectedColumn": "context_1_column_1",
  },
]
`;

exports[`Connection › Router Select in previous context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 62,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_1_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_62",
      },
    ],
    "selectedColumn": "context_1_column_1",
  },
]
`;

exports[`Connection › Router Selected list 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_2",
            "page": 2,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_2",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;

exports[`Connection › Router Selected list and new context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 3,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "mstId": "context_0_column_3",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_2",
  },
]
`;

exports[`Connection › Router Selected list and new context without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
        Array [
          Object {
            "id": 3,
            "page": 1,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 10,
            "page": 1,
            "type": "tag",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 4,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_4",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "0_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "0_category_7_page_1",
      },
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 3,
            "mstId": "0_category_3_page_1",
            "page": 1,
            "type": "category",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_3",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 10,
            "mstId": "0_tag_10_page_1",
            "page": 1,
            "type": "tag",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_4",
  },
]
`;

exports[`Connection › Router Selected list with previous different context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_1_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "id": 7,
            "mstId": "1_category_7_page_1",
            "page": 1,
            "type": "category",
            "visited": true,
          },
        ],
        "selectedItem": "1_category_7_page_1",
      },
    ],
    "selectedColumn": "context_1_column_1",
  },
]
`;

exports[`Connection › Router Selected single 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;

exports[`Connection › Router Selected single and context object with extracted 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "extract": true,
            "id": "post",
            "page": 1,
            "type": "latest",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 2,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": true,
            "id": "post",
            "mstId": "0_latest_post_page_1",
            "page": 1,
            "type": "latest",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_2",
  },
]
`;

exports[`Connection › Router Selected single and new context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 2,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "context_0_column_2",
  },
]
`;

exports[`Connection › Router Selected single and new context without selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 64,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 3,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_3",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 64,
            "mstId": "0_post_64",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
    ],
    "selectedColumn": "context_0_column_3",
  },
]
`;

exports[`Connection › Router Selected single and new context, with previous diff context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 1,
    "infinite": undefined,
    "mstIdForColumn": 2,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_1_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "1_post_63",
            "type": "post",
            "visited": false,
          },
        ],
        "selectedItem": "",
      },
      Object {
        "mstId": "context_1_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "1_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "context_1_column_2",
  },
]
`;

exports[`Connection › Router Selected single and previous context with selected 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 62,
            "type": "post",
          },
          Object {
            "id": 60,
            "type": "post",
          },
        ],
      ],
      "options": Object {
        "someThemeOption": 123,
      },
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 2,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_63",
      },
      Object {
        "mstId": "context_0_column_2",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 62,
            "mstId": "0_post_62",
            "type": "post",
            "visited": false,
          },
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;

exports[`Connection › Router Selected single with previous different context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 63,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 63,
            "mstId": "0_post_63",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_63",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 1,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_1_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "1_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "1_post_60",
      },
    ],
    "selectedColumn": "context_1_column_1",
  },
]
`;

exports[`Connection › Router Selected single with previous equal context 1`] = `
Array [
  Object {
    "generator": Object {
      "columns": Array [
        Array [
          Object {
            "id": 60,
            "page": undefined,
            "type": "post",
          },
        ],
      ],
    },
    "index": 0,
    "infinite": undefined,
    "mstIdForColumn": 1,
    "options": undefined,
    "rawColumns": Array [
      Object {
        "mstId": "context_0_column_1",
        "rawItems": Array [
          Object {
            "extract": null,
            "fromList": Object {
              "id": "post",
              "page": 1,
              "type": "latest",
            },
            "id": 60,
            "mstId": "0_post_60",
            "type": "post",
            "visited": true,
          },
        ],
        "selectedItem": "0_post_60",
      },
    ],
    "selectedColumn": "context_0_column_1",
  },
]
`;
